--- a/frontend/src/global_styles/content/work_packages/tabs/_tab_content.sass
+++ b/frontend/src/global_styles/content/work_packages/tabs/_tab_content.sass
@@ -37,6 +37,9 @@
       &.with-text
         margin-right: 8px
 
+    .spot-list:not(:last-child)
+      margin-bottom: $spot-spacing-0-75
+
   &--tab-section
     margin-bottom: 32px
 
